Perkin-UAT/force-app/main/default/objects/SMAX_PS_Predicted_Scheduled_Date_Setting__mdt/SMAX_PS_Predicted_Scheduled_Date_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Predicted Scheduled Date Setting</label>
    <pluralLabel>Predicted Scheduled Date Settings</pluralLabel>
</CustomObject>