Perkin-UAT/force-app/main/default/objects/SMAX_PS_Predicted_Scheduled_Date_Setting__mdt/fields/SMAX_PS_Add_Days__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Add_Days__c</fullName>
    <description>The number of days to add to the last labor date when creating a new work order</description>
    <label>Add Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>