Perkin-UAT/force-app/main/default/objects/SMAX_PS_Predicted_Scheduled_Date_Setting__mdt/fields/SMAX_PS_Add_Months__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Add_Months__c</fullName>
    <description>The number of months to add to the last labor date when creating the new work order</description>
    <label>Add Months</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>