Perkin-UAT/force-app/main/default/objects/SMAX_PS_Predicted_Scheduled_Date_Setting__mdt/fields/SMAX_PS_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Order_Type__c</fullName>
    <label>Order Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable Calibration</fullName>
                <default>true</default>
                <label>Billable Calibration</label>
            </value>
            <value>
                <fullName>Billable LabMetrix</fullName>
            </value>
            <value>
                <fullName>Billable PM</fullName>
            </value>
            <value>
                <fullName>Billable Qualification</fullName>
            </value>
            <value>
                <fullName>Billable UOQ</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Instr. Performance Validation</fullName>
            </value>
            <value>
                <fullName>OQ/PQ</fullName>
            </value>
            <value>
                <fullName>Planned Maintenance</fullName>
            </value>
            <value>
                <fullName>Qualification - Lab Manager</fullName>
            </value>
            <value>
                <fullName>Software validation</fullName>
            </value>
            <value>
                <fullName>Universal IQOQ</fullName>
            </value>
            <value>
                <fullName>Universal OQ</fullName>
            </value>
            <value>
                <fullName>Validation Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>